feature: dynamic form validation, submitting (WIP)

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -186,7 +186,8 @@
         "assignment": "Assignment grade",
         "activity": "Activity grade",
         "behaviour": "Behaviour grade"
-      }
+      },
+      "submit": "Assign"
     },
     "helperText": {
       "setSubjectToSetStudent": "To select student, first select subject",
