feature: display "your grades"

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -246,6 +246,9 @@
     "test": "Test",
     "activity": "Activity",
     "behaviour": "Behaviour",
+    "average": "Average",
+    "proposed": "Proposed",
+    "final": "Final",
     "writtenBy": "Written by <1>{{ author }}</1>",
     "publishedOn": "Published on <1>{{ date }}</1>",
     "welcome": "Welcome",
