feature: display "your grades" (#72)

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -198,7 +198,10 @@
     },
     "type": {
       "assignment": "Assignment grades",
-      "nonAssignment": "Activity & behaviour grades"
+      "nonAssignment": "Activity & behaviour grades",
+      "average": "Average grade",
+      "proposed": "Proposed grade",
+      "final": "Final grade"
     },
     "helperText": {
       "setSubjectToSetStudent": "To select student, first select subject",
