improvement: hide task submission date if not submitted improvement: disable evaluate button if already graded improvement: better show the current status of submission

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -109,12 +109,15 @@
     "submissions": {
       "noItems": "There are no submitted solutions yet.",
       "notSubmittedYet": "Not submitted yet",
+      "graded": "Evaluated",
       "yourSubmissionToTask": "Your submission to task",
       "message": "Message",
+      "noMessage": "none",
       "attachedFile": "Attached file",
       "downloadFile": "Download",
       "sentOn": "Sent on",
       "evaluate": "Evaluate submission",
+      "alreadyEvaluated": "Already evaluated",
       "evaluateDialog": {
         "title": "Task submission evaluation"
       }
