--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -109,12 +109,15 @@
     "submissions": {
       "noItems": "Brak przesłanych rozwiązań",
       "notSubmittedYet": "Nie przesłane",
+      "graded": "Ocenione",
       "yourSubmissionToTask": "Twoja odpowiedź na zadanie",
       "message": "Wiadomość",
+      "noMessage": "brak",
       "attachedFile": "Załączony plik",
       "downloadFile": "Pobierz",
       "sentOn": "Wysłano",
       "evaluate": "Oceń rozwiązanie",
+      "alreadyEvaluated": "Rozwiązanie ocenione",
       "evaluateDialog": {
         "title": "Ocena rozwiązania zadania"
       }
@@ -224,6 +227,9 @@
       "5,5": "Bardzo dobra+ (5.5)",
       "6": "Celująca (6)"
     },
+    "toast": {
+      "assumedLowestValue": "Ocena 1 została automatycznie wybrana, ponieważ uczeń nie dostarczył rozwiązania.\nJest to tylko sugestia."
+    },
     "noItems": "Brak ocen do wyświetlenia"
   },
   "actions": {
@@ -244,6 +250,7 @@
     "submit": "Wyślij",
     "confirm": "Potwierdź",
     "cancel": "Anuluj",
+    "dontShowThis": "Nie pokazuj tego",
     "task": "Zadanie",
     "homework": "Zadanie domowe",
     "test": "Test",
