feature: fetch & display received grade (student view)

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -110,7 +110,9 @@
       "noItems": "There are no submitted solutions yet.",
       "notSubmittedYet": "Not submitted yet",
       "graded": "Evaluated",
-      "yourSubmissionToTask": "Your submission to task",
+      "yourScore": "Your score",
+      "receivedGrade": "This submission has been evaluated to",
+      "yourSubmission": "Your submission to this task",
       "message": "Message",
       "noMessage": "none",
       "attachedFile": "Attached file",
