--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -110,7 +110,9 @@
       "noItems": "Brak przesłanych rozwiązań",
       "notSubmittedYet": "Nie przesłane",
       "graded": "Ocenione",
-      "yourSubmissionToTask": "Twoja odpowiedź na zadanie",
+      "yourScore": "Twoja ocena",
+      "receivedGrade": "Odpowiedź została oceniona na",
+      "yourSubmission": "Twoja odpowiedź na to zadanie",
       "message": "Wiadomość",
       "noMessage": "brak",
       "attachedFile": "Załączony plik",
