feature: confirm bulk evaluation

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -144,7 +144,9 @@
       "deleteTitle": "Deleting a task",
       "deleteMessage": "Are you sure you want to delete this task? This operation cannot be undone.",
       "finishNowTitle": "Finishing a task",
-      "finishNowMessage": "Are you sure you want to finish this task right now? This operation cannot be undone."
+      "finishNwMessage": "Are you sure you want to finish this task right now? This operation cannot be undone.",
+      "bulkEvaluateTitle": "Evaluating multiple students",
+      "bulkEvaluateMessage": "Are you sure you want to assign grade 1 to every student, who did not send a submission? This operation cannot be undone."
     },
     "toast": {
       "updateSuccess": "Successfully updated task \"{{ name }}\""
