--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -122,7 +122,8 @@
       "alreadyEvaluated": "Rozwiązanie ocenione",
       "evaluateDialog": {
         "title": "Ocena rozwiązania zadania"
-      }
+      },
+      "gradeNotSubmittedWith": "Wystaw 1 wszystkim, którzy nie przesłali pracy"
     },
     "submitSolution": "Prześlij rozwiązanie",
     "taskMessagePlaceholder": "Napisz odpowiedź bądź opcjonalny komentarz",
@@ -143,7 +144,9 @@
       "deleteTitle": "Potwierdź usunięcie zadania",
       "deleteMessage": "Czy na pewno usunąć wybrane zadanie? Tej operacji nie da się cofnąć.",
       "finishNowTitle": "Potwierdź zakończenie zadania",
-      "finishNowMessage": "Czy na pewno zakończyć zadanie w tym momencie? Tej opacji nie da się cofnąć."
+      "finishNowMessage": "Czy na pewno zakończyć zadanie w tym momencie? Tej operacji nie da się cofnąć.",
+      "bulkEvaluateTitle": "Potwierdź wystawienie wielu ocen",
+      "bulkEvaluateMessage": "Czy na pewno chcesz wystawić ocenę 1 wszystkim uczniom, którzy nie przesłali odpowiedzi? Tej operacji nie da się cofnąć."
     },
     "toast": {
       "updateSuccess": "Zaktualizowano zadanie \"{{ name }}\""
