feature: update grade in task submissions list

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -120,6 +120,7 @@
       "sentOn": "Sent on",
       "evaluate": "Evaluate submission",
       "alreadyEvaluated": "Already evaluated",
+      "editGrade": "Change the grade",
       "evaluateDialog": {
         "title": "Task submission evaluation"
       },
