--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -120,6 +120,7 @@
       "sentOn": "Wysłano",
       "evaluate": "Oceń rozwiązanie",
       "alreadyEvaluated": "Rozwiązanie ocenione",
+      "editGrade": "Zmień ocenę",
       "evaluateDialog": {
         "title": "Ocena rozwiązania zadania"
       },
