feature: update grade (in all grades list) (#83)

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -120,6 +120,7 @@
       "sentOn": "Sent on",
       "evaluate": "Evaluate submission",
       "alreadyEvaluated": "Already evaluated",
+      "editGrade": "Change the grade",
       "evaluateDialog": {
         "title": "Task submission evaluation"
       },
@@ -204,6 +205,14 @@
         "success": "Successfully assigned a grade",
         "proposedSuccess": "Successfully assigned the proposed final grade",
         "confirmSuccess": "Successfully confirmed the final grade"
+      }
+    },
+    "update": {
+      "title": "Update the grade",
+      "message": {
+        "assignment": "You are modifying grade of <0>{{ studentName }}</0><br />received for task <0>{{ taskName }}</0> (created at {{ date }}).",
+        "behaviour": "You are modifying grade of <0>{{ studentName }}</0><br />received for <0>behaviour</0> (created at {{ date }}).",
+        "activity": "You are modifying grade of <0>{{ studentName }}</0><br />received for <0>activity</0> (created at {{ date }})."
       }
     },
     "type": {
