--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -120,6 +120,7 @@
       "sentOn": "Wysłano",
       "evaluate": "Oceń rozwiązanie",
       "alreadyEvaluated": "Rozwiązanie ocenione",
+      "editGrade": "Zmień ocenę",
       "evaluateDialog": {
         "title": "Ocena rozwiązania zadania"
       },
@@ -204,6 +205,14 @@
         "success": "Wystawiono nową ocenę",
         "proposedSuccess": "Wystawiono proponowaną ocenę końcową",
         "confirmSuccess": "Wystawiono ocenę końcową"
+      }
+    },
+    "update": {
+      "title": "Zmień ocenę",
+      "message": {
+        "assignment": "Modyfikujesz ocenę ucznia <0>{{ studentName }}</0><br />za zadanie <0>{{ taskName }}</0> (z dnia {{ date }}).",
+        "behaviour": "Modyfikujesz ocenę ucznia <0>{{ studentName }}</0><br />za <0>zachowanie</0> (z dnia {{ date }}).",
+        "activity": "Modyfikujesz ocenę ucznia <0>{{ studentName }}</0><br />za <0>aktywność</0> (z dnia {{ date }})."
       }
     },
     "type": {
